--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <title>Anzaan School Education</title>
+  <title>Anzaan School Education </title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
 
@@ -13,7 +13,7 @@
 <body>
   <header>
     <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgqdK75iqN-OA-fe7whPP8CH1G-J0K1Wu1sG12GX46ENiN5aOZ1sI6eITmGWvdXmURmXL1ZxUsH11lTQGaU6uHy1xa3dGwTqWpBS4jp_UHmdpLmVTB8spiWE1kTW86iWBupYHycgfxkvc_Ef-nEakOO_JZvzXtUOw_JDYnyuNYknSHDil1RY_F5SP3-_zOD/s3500/Logo%20name.jpg" alt="Anzaan Education logo" />
-    <h1>Anzaan School Education</h1>
+    <h1>Anzaan School Education <i class="fa fa-graduation-cap" aria-hidden="true"></i>  </h1>
   </header>
 
 
@@ -25,12 +25,7 @@
 
     <div class="ticker-wrapper">
         <div class="ticker">
-          <span style="color: orange">  ॐ कृष्णाय  </span>  
-          वासुदेवाय 
-           <span style="color: greenyellow">   हरये परमात्मने । </span>  
-         <span style="color: orange"> प्रणतः क्लेशनाशाय </span>  
-          गोविंदाय 
-         <span style="color: greenyellow"> नमो नमः || </span>  
+         “The Road To Success And The Road To Failure Are Almost Exactly The Same.”
         </div>
     </div>
 
@@ -48,7 +43,7 @@
 
   <main>
 
-    <h2>Important Knowledge</h2>
+    <h2>Important Knowledge </h2>
     <div class="grid">
      <a href="#" onclick="openRajasthanMapPopup()">
   <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgZS4ptqD6O0wcr2UDtaYRJxhmyiudq9FOYRCT3c3f-mPfUIrPy6sbXoc8-Bw7_pHABzn8MRc8cgbeqet6IArj-cEaRvXMY4ND5JV9V2d57P5Wz5dVe6sKENzCy8_VDMpHCuF0TNse69xQ615zCyeIDAN_ULGVo_Mefc_22S3B-FIEM7U23siDr9W-voFZC/s1080/20250119_191458_0000.png" alt="Self-Growth icon" />
@@ -63,6 +58,66 @@
   </div>
 </div>
 
+<a href="#" onclick="openRespiratorySystemPopup()">
+  <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjYbhpMn-jZFlAd_ignVxAbspdS7wyyvA8vvCAEh7tV2bp6FIxTUHkZxj_T12G9wLgAboyJvjCIXWJMMdsYYLxzQlmDJSJuG685DQ-TKNKfmvpQmTocnOikqFttXzPe_Fmx8UDmcUny4yDYQyiCXNDo81hpEbH0d4j9Tth05vvK8Cq5PvX7RxkUCB6wl3lb/s800/6120907736804869106.jpg" alt="Respiratory System icon" />
+  <span>Respiratory System</span>
+</a>
+
+<div id="respiratorySystemPopup" class="popup" style="display: none;">
+  <div class="popup-content">
+    <button class="close-btn" onclick="closeRespiratorySystemPopup()">✖</button>
+    <h2>Respiratory system</h2>
+    <img id="respiratorySystemImage" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjFbYQJQmvgex1IQF2F80MAfZhWIb85zq_1RDxSuDpR-U4B97aPJj7NX0gSOGr-u07Wj2j2ewGynsymNyhmkeNs0MPiWiy7zHYOTMQoJNzPBAz6rBPq7QLd7yQM5sBbhR_rQECPqP88UDPIAv6QHm0bpT67jjKoDfzqCiXqqNqSCN4skdM_0pr08hSHPum5/s2160/6120907736804869102.jpg" alt="Respiratory system" style="max-width: 100%; max-height: 100%; object-fit: contain;">
+  </div>
+</div>
+
+<script>
+  function openRespiratorySystemPopup() {
+    document.getElementById('respiratorySystemPopup').style.display = 'flex';
+  }
+
+  function closeRespiratorySystemPopup() {
+    document.getElementById('respiratorySystemPopup').style.display = 'none';
+  }
+</script>
+
+<style>
+  #respiratorySystemPopup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #respiratorySystemPopup .popup-content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    max-width: 80%;
+    max-height: 80%;
+    overflow: auto;
+  }
+
+  #respiratorySystemPopup .close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    cursor: pointer;
+  }
+
+  #respiratorySystemImage {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+  }
+</style>
      <a href="#" onclick="openImagePopup()">
   <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhl2J8RQI3diKoWEYYyWINZwgIqB3yRhwHGXM3HoDT-yN2RZyf7SDERazfRGZ72JZ9cufBNMIn5F7PWPD472MIi6-Z7uYUVy-DqHfsLXoVnMGOTcHDQeXOF2nyMGkinbPOIPeN9KNnwrhKZurwx-wHo0G8IzdLQq-2jOuJzAe-kSoy0kUBu0bk1BVy7Hhie/s800/6102734102382887533.jpg" alt="Business & Career icon" />
   <span>heart</span>
@@ -392,6 +447,8 @@
     object-fit: contain;
   }
 </style>
+
+<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 </body>
 
 
