--- a/index.html
+++ b/index.html
@@ -72,7 +72,19 @@
 
     <h2>Important Knowledge  <i class="fas fa-award"></i> </h2>
     <div class="grid">
-     <a href="#" onclick="openRajasthanMapPopup()">
+   
+   <a href="timetable2025.html">
+  <i class="fab fa-audible icon-with-space"></i>
+  <span> Annual Exam Time Table-2025</span>
+</a>
+
+<style>
+  .icon-with-space {
+    margin-right: 10px;
+  }
+</style>
+   
+      <a href="#" onclick="openRajasthanMapPopup()">
   <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgZS4ptqD6O0wcr2UDtaYRJxhmyiudq9FOYRCT3c3f-mPfUIrPy6sbXoc8-Bw7_pHABzn8MRc8cgbeqet6IArj-cEaRvXMY4ND5JV9V2d57P5Wz5dVe6sKENzCy8_VDMpHCuF0TNse69xQ615zCyeIDAN_ULGVo_Mefc_22S3B-FIEM7U23siDr9W-voFZC/s1080/20250119_191458_0000.png" alt="Self-Growth icon" />
   <span>Rajasthan Map [NEW]</span>
 </a>
@@ -380,7 +392,7 @@
       
       <a href="index.html" class="active">
         <i class="fas fa-search"></i>
-        <span>Explore</span>
+        <span>Home</span>
       </a>
       <a href="Library.html">
         <i class="fas fa-bookmark"></i>
