--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
 </head>
 
 <body>
-  <header>
-    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgqdK75iqN-OA-fe7whPP8CH1G-J0K1Wu1sG12GX46ENiN5aOZ1sI6eITmGWvdXmURmXL1ZxUsH11lTQGaU6uHy1xa3dGwTqWpBS4jp_UHmdpLmVTB8spiWE1kTW86iWBupYHycgfxkvc_Ef-nEakOO_JZvzXtUOw_JDYnyuNYknSHDil1RY_F5SP3-_zOD/s3500/Logo%20name.jpg" alt="Anzaan Education logo" />
-    <h1>Anzaan School Education <i class="fa fa-graduation-cap" aria-hidden="true"></i>  </h1>
-  </header>
-
-
+ <!-- Header Section -->
+    <header class="header-container">
+        <div class="logo">
+            <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiuqGXxBRV05Iwsml7P0iqEE5137LfetipQ2XHo2dfQtobTyMvCk5Yw3PA7xj2uRD616xrYoIppp-04Vip2OXMy6rl-bAEbrgJvMw7UH4OwjLFzwKOvpdcWEzOAfxWvWfanxLkqyMgUFTXiXOmDT-G11Obz-BR0th42cSsriWPjqzslNe25jE3H-1Ni61c/s1080/Advancing%20New%20Zones%20for%20Academic%20Analysis%20&%20New%20Discoveries_20250222_151031_0000.png" alt="Anzaan Logo">
+        </div>
+        <div class="platform-info">
+            <h1>Anzaan Education <i class="fa fa-graduation-cap"></i> </h1>
+            <p>Advancing New Zones for Academic Analysis & New Discoveries</p>
+        </div>
+    </header>
 
 
 
